--- a/Terraria.ModKit.csproj
+++ b/Terraria.ModKit.csproj
@@ -59,10 +59,6 @@
       <HintPath>D:\Programs\Steam\SteamApps\common\Terraria\ReLogic.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Collections.Immutable, Version=1.2.3.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\VanillaTerrariaTwitch\bin\Debug\System.Collections.Immutable.dll</HintPath>
-    </Reference>
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -182,6 +178,9 @@
     <Compile Include="REPL\REPLBackend.cs" />
     <Compile Include="REPL\REPLTool.cs" />
     <Compile Include="REPL\REPLUI.cs" />
+    <Compile Include="TerrariaM\ID\GameModeId.cs" />
+    <Compile Include="TerrariaM\Program.cs" />
+    <Compile Include="TerrariaM\WindowsLaunch.cs" />
     <Compile Include="UIElements\FixedUIScrollBar.cs" />
     <Compile Include="UIElements\NewUITextBox.cs" />
     <Compile Include="UIElements\NewUITextBoxMultiLine.cs" />
